🔧 Set correct logo size on mobile

--- a/scss/main.css
+++ b/scss/main.css
@@ -225,7 +225,7 @@ body.lock {
 }
 body .header {
   background-color: var(--header-bg);
-  padding: 17px 0;
+  padding: clamp(0.5rem, 0.313rem + 0.94vw, 1.063rem) 0;
   color: var(--header-color);
 }
 body .header .header__container {
@@ -234,7 +234,8 @@ body .header .header__container {
   gap: clamp(1.25rem, -24.583rem + 41.67vw, 8.75rem);
 }
 body .header .header__container .header__logo {
-  flex: 0 1 60px;
+  width: 4.6875%;
+  min-width: 30px;
   aspect-ratio: 59/65;
 }
 body .header .header__container nav.nav {
